--- a/src/App.css
+++ b/src/App.css
@@ -1,54 +1,220 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+* {
+  background-color: rgb(254, 243, 226);
 }
+
+
+/* App */
+
+.App {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  margin: 5% 5% 5% 5%;
+}
+
+/* @media only screen and (min-width: 600px) {
+  .App {
+    grid-template-columns: 25% 75%;
+    grid-template-rows: min-content auto;
+    grid-template-areas:
+      'nav nav'
+      'content content';
+  }
+} */
+/* Nav Bar  */
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  width: 40px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h2{
+  margin-top: -7px;
+  margin-bottom: -7px;
+}
+nav {
+  /* padding-left: 5%;
+  padding-right: 5%; */
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  align-self: flex-start;
+    position: fixed;
+    top: 0;
+    /* left: 0; */
+    width: 100vw;
+    z-index: 100;
+    height: 60px;
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.menu-link {
+  margin-left: 15px;
 }
 
-.card {
-  padding: 2em;
+.dropdown{
+  margin-bottom: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
 
-.read-the-docs {
-  color: #888;
+a {
+  color: #333333;
 }
+
+
+.articles-list{
+  margin-top: 60px;
+  margin-left: 5%;
+  margin-right: 5%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
 
 .article-card {
   list-style: none;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.art-card-image{
+  width: 80vw;
+}
+
+.single-article {
+  padding-left: 5%;
+  padding-right: 5%;
+  width: 90vw;
+  display: flex;
   flex-direction: column;
-  overflow: wrap;
-  max-width: 600px;
+  justify-items: center;
+  align-items: center;
+  margin-top: 60px;
+}
+
+.single-art-card{
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+.single-art-img {
+  width: 80vw;
+}
+
+.art-title{
+  width: 85vw;
+  margin-top: 15px;
+  margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.short-art-details{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.article-details{
+  font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  
+}
+
+.voting-button{
+  background-color: white;
+  border-radius: 50%;
+  padding: 10px;
+}
+
+ul {
+  width: 80vw;
+  margin: 0px 0px 0px 0px;
 }
 
 li {
   list-style: none;
+  margin: 0;
+}
+
+/* add-comment{
+
+} */
+
+.add-comment-form{
+  background-color: white;
+  border-radius: 15px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+#comment-body{
+  background-color: white;
+  border: solid #333333 1px;
+  border-radius: 15px;
+  width: 70vw;
+  height: 70px;
+  font-size: 16px;
+}
+
+#commenter{
+  background-color: white;
+  font-size: 14px;
+  font-weight: 700;
+}
+
+#add-comment-button{
+  background-color: lightblue;
+  border-radius: 15px;
+  padding: 10px;
+}
+
+p {
+  margin: 0; 
+  padding: 0; 
+  margin-bottom: 10px; 
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.single-comment{
+  margin-top: 15px;
+  margin-bottom: 15px;
+  background-color: white;
+  border-radius: 15px;
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
