--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
@@ -16,19 +16,21 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #212122;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  text-decoration: underline;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* min-width: 320px; */
   min-height: 100vh;
+  /* justify-items: center; */
+  /* align-items: center; */
+  place-items: center;
 }
 
 h1 {
@@ -48,7 +50,7 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  text-decoration: underline;
 }
 button:focus,
 button:focus-visible {
@@ -61,9 +63,10 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #131416;
+    text-decoration: underline;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #f9f9f900;
   }
 }
